# oboro-nvim

./: .editorconfig  .gitignore  .luarc.json  Cargo.toml  README.md  flake.nix  startup
.github/workflows/: test.yml
lua/oboro/: init.lua
nix/: adapter.nix  module.nix  tests.nix  types.nix
nix/checks/: adapter.spec.nix  default.nix  fixture.nix
resolver/: Cargo.toml
resolver/src/: config.rs  generator.rs  main.rs
resolver/src/config/: input.rs  output.rs
scripts/: preprocess.py
src/: config.rs  generator.rs
