[package]
name = "oboro-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.156", features = ["derive"] }
serde_json = { version = "1.0.94" }
anyhow = { version = "1.0" }
itertools = { version = "0.10.5" }

[dev-dependencies]
rstest = "0.17.0"
